# comonad-19

./: README.md  stack.yaml
.github/workflows/: haskell.yml
comonad-19/: README.md  comonad19.cabal
comonad-19/app/: Main.hs
comonad-19/src/: Comonad19.hs
