name:                comonad19
version:             0.1.0.0
synopsis:            Synopsis for comonad19
description:         Package for comonad19

homepage:            https://github.com/pavponn/comonad-19
license:             MIT
license-file:        LICENSE
author:              Pavel Ponomarev
maintainer:          pavponn@yandex.ru
copyright:           2020 Pavel Ponomarev

category:            Shell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.6.5

executable comonad-19
  hs-source-dirs:      app
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  ghc-options:         -Wall
  build-depends:       base >=4.9 && < 5
                     , comonad19
                     , ansi-terminal
                     , random
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:    Comonad19
  ghc-options:         -Wall -Werror
  build-depends:       base >= 4.9 && < 5
                     , comonad
                     , random
                     , mtl
  default-language:    Haskell2010
